@@ -25,10 +25,10 @@
     if (n4 != n) 
         stop("Y and X4 do not have the same number of rows")
     Y <- scale(Y, center = TRUE, scale = FALSE)
-    X1 <- scale(X1, center = TRUE, scale = TRUE)
-    X2 <- scale(X2, center = TRUE, scale = TRUE)
-    X3 <- scale(X3, center = TRUE, scale = TRUE)
-    X4 <- scale(X4, center = TRUE, scale = TRUE)
+    X1 <- scale(X1, center = TRUE, scale = FALSE)
+    X2 <- scale(X2, center = TRUE, scale = FALSE)
+    X3 <- scale(X3, center = TRUE, scale = FALSE)
+    X4 <- scale(X4, center = TRUE, scale = FALSE)
     SS.Y <- sum(Y * Y)
     dummy <- simpleRDA2(Y, X1, SS.Y)
     aeghklno.ua <- dummy$Rsquare
