@@ -5,6 +5,12 @@ VEGAN DEVEL VERSIONS at http://r-forge.r-project.org/
 Vegan 2.1-10 (opened January 22, 2012)
 
 	* mantel, mantel.partial: implemented parallel processing.
+
+	* varpart: do not scale constraints to unit sd -- this makes
+	constant columns (like all zero) into NaN and causes an error in
+	simpleRDA2.  Not scaling may help in problems like that reported
+	in "[vegan-help][5477] Nested factors in function "varpart"?" by
+	Katie Shelef on 26 Jan 2012
 	
 Version 2.1-9 (closed January 22, 2012)
 
